// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add custom config to package.json 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {},
  \\"release\\": {
    \\"pizza\\": 42
  }
}"
`;

exports[`should add semantic-release 1`] = `
Object {
  "/.gitignore": "Changelog.md",
  "/.travis.yml": "language: node_js
node_js:
  - 8
after_success:
  - npm install -g semantic-release
  - semantic-release pre && npm publish && semantic-release post
branches:
  except:
    - /^v\\\\d+\\\\.\\\\d+\\\\.\\\\d+$/
",
  "/Readme.md": "# Unicorn

[![npm](https://img.shields.io/npm/v/unicorn.svg)](https://www.npmjs.com/package/unicorn)",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {}
}",
}
`;

exports[`should install extra dependencies on CI 1`] = `
"language: node_js
node_js:
  - 8
after_success:
  - npm install -g semantic-release
  - npm install --no-save pizza
  - semantic-release pre && npm publish && semantic-release post
branches:
  except:
    - /^v\\\\d+\\\\.\\\\d+\\\\.\\\\d+$/
"
`;

exports[`should remove the official semantic-release runner 1`] = `
"language: node_js
node_js:
  - 8
after_success:
  - 'bash <(curl -s https://codecov.io/bash)'
  - npm install -g semantic-release
  - semantic-release pre && npm publish && semantic-release post
branches:
  except:
    - /^v\\\\d+\\\\.\\\\d+\\\\.\\\\d+$/
"
`;
